--- a/aufgabe_3/style.css
+++ b/aufgabe_3/style.css
@@ -4,6 +4,9 @@ h1 {
     font-family: sans-serif;
     letter-spacing: -21px;
     margin: 0px;
+    display: block;
+    
+    
 }
 
 
@@ -55,8 +58,8 @@ body {
     height: 400px;
     border-bottom-right-radius: 400px;
     border-bottom-left-radius: 400px;
-    position: relative;
     margin-bottom: 180px;
+    display: block;
 
 
 }   
